--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 /* */
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: content-box;
   font-size: 10px;
   font-family: sans-serif;
   background-color: #ddd;
@@ -11,31 +8,40 @@ body {
   display: none;
 }
 .head {
-  display: table;
   background-color: #fff;
   border: 1px solid #eee;
   width: 99%;
-  height: 3em;
   margin: 10px auto;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   font-size: 1.2em;
+  min-height: 30px;
 }
-.head_order-box,
-.head_user {
+.head_div {
+  vertical-align: middle;
+  text-align: center;
+}
+.wrap {
+  display: table;
+  width: 100%;
+  height: 30px;
+  margin: 0 auto;
+  overflow-x: scroll;
+}
+.wrap_block {
   display: table-cell;
   vertical-align: middle;
-  padding: 5px;
+  text-align: center;
 }
 .table {
   background-color: #fff;
   border: 1px solid #eee;
   width: 99%;
-  height: 90vh;
   margin: 10px auto;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   font-size: 1.2em;
+  height: 85vh;
   overflow-y: scroll;
 }
 .task {
@@ -45,4 +51,49 @@ body {
 .task_title {
   border-bottom: 1px dotted black;
   text-align: center;
+}
+.task_action {
+  margin: 0 5px;
+}
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 10;
+  font-size: 1.2em;
+  height: 320px;
+  width: 300px;
+  border: 1px solid black;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+}
+.popup_btn {
+  text-align: right;
+}
+.popup_btn a {
+  display: inline-block;
+  margin: 2px;
+}
+.bottom {
+  background-color: #fff;
+  border: 1px solid #eee;
+  width: 99%;
+  margin: 10px auto;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  font-size: 1.2em;
+  height: 5vh;
+  min-height: 43px;
+}
+.bottom_wrap {
+  position: absolute;
+  right: 50%;
+  transform: translateX(50%);
+  align-items: center;
+  margin: 5px;
+}
+#auth_popup {
+  height: 230px;
 }
