--- a/less/style.less
+++ b/less/style.less
@@ -1,9 +1,7 @@
 
 /* */
 body{
-  margin: 0;
-  padding: 0;
-  box-sizing: content-box;
+
   font-size: 10px;
   font-family: sans-serif;
   background-color: #ddd;
@@ -13,11 +11,10 @@ body{
   display: none;
 }
 
-.box(@height){
+.box(){
   background-color: #fff;
   border: 1px solid #eee;
   width: 99%;
-  height: @height;
   margin: 10px auto;
   box-shadow: 2px 2px 10px rgba(0,0,0,.5);
   border-radius: 5px;
@@ -25,17 +22,30 @@ body{
 }
 
 .head{
+  .box();
+  min-height: 30px;
+   &_div{
+     vertical-align: middle;
+     text-align: center;
+  }
+}
+
+.wrap{
   display: table;
-  .box(3em);
-  &_order-box, &_user{
+  width: 100%;
+  height: 30px;
+  margin: 0 auto;
+  overflow-x: scroll;
+  &_block{
     display: table-cell;
     vertical-align: middle;
-    padding: 5px;
+    text-align: center;
   }
 }
 
 .table{
-  .box(90vh);
+  .box();
+  height: 85vh;
   overflow-y: scroll;
 }
 
@@ -46,4 +56,46 @@ body{
     border-bottom: 1px dotted black;
     text-align: center;
   }
+  &_action{
+    margin: 0 5px;
+  }
+}
+
+.popup{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 10;
+  font-size: 1.2em;
+  height: 320px;
+  width: 300px;
+  border: 1px solid black;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  &_btn{
+    text-align: right;
+  }
+  &_btn a{
+    display: inline-block;
+    margin: 2px;
+  }
+}
+
+.bottom{
+  .box();
+  height: 5vh;
+  min-height: 43px;
+  &_wrap{
+    position: absolute;
+    right: 50%;
+    transform: translateX(50%);
+    align-items: center;
+    margin: 5px;
+  }
+}
+
+#auth_popup{
+  height: 230px;
 }
